--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>한강 작가 소개</title>
     <meta
       name="description"
-      content="맨부커 인터내셔널상을 수상한 한국의 대표 작가 한강의 공식 소개 페이지입니다."
+      content="노벨 문학상을 수상한 한국의 대표 작가 한강의 공식 소개 페이지입니다."
     />
 
     <!-- favicon -->
@@ -29,10 +29,10 @@
 
     <!-- OG 태그 -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="한강 작가 | 공식 소개 페이지" />
+    <meta property="og:title" content="한강 작가 | 소개 페이지" />
     <meta
       property="og:description"
-      content="맨부커 인터내셔널상을 수상한 한국의 대표 작가 한강의 공식 소개 페이지입니다."
+      content="노벨 문학상을 수상한 한국의 대표 작가 한강 소개 페이지입니다."
     />
     <meta
       property="og:image"
@@ -41,10 +41,10 @@
 
     <!-- 트위터 카드 -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="한강 작가 | 공식 소개 페이지" />
+    <meta name="twitter:title" content="한강 작가 | 소개 페이지" />
     <meta
       name="twitter:description"
-      content="맨부커 인터내셔널상을 수상한 한국의 대표 작가 한강의 공식 소개 페이지입니다."
+      content="노벨 문학상을 수상한 한국의 대표 작가 한강의 소개 페이지입니다."
     />
     <meta name="twitter:image" content="/api/placeholder/1200/630" />
 
@@ -127,7 +127,7 @@
     <section class="hero-section text-center">
       <div class="container">
         <h1 class="display-4 mb-4">한강</h1>
-        <p class="lead">맨부커 인터내셔널상 수상 작가</p>
+        <p class="lead">맨부커 인터내셔널상 & 노벨 문학상 수상 작가</p>
         <button
           type="button"
           class="btn btn-outline-light mt-3"
@@ -253,12 +253,33 @@
                     data-bs-toggle="collapse"
                     data-bs-target="#award1"
                   >
-                    맨부커 인터내셔널상 (2016)
+                    노벨 문학상 수상 (2024)
                   </button>
                 </h2>
                 <div
                   id="award1"
                   class="accordion-collapse collapse show"
+                  data-bs-parent="#awardsAccordion"
+                >
+                  <div class="accordion-body">
+                    한국인 최초, 아이사인 여성 최초 노벨 문학상을 수상
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#award2"
+                  >
+                    맨부커 인터내셔널상 (2016)
+                  </button>
+                </h2>
+                <div
+                  id="award2"
+                  class="accordion-collapse collapse"
                   data-bs-parent="#awardsAccordion"
                 >
                   <div class="accordion-body">
@@ -272,13 +293,13 @@
                     class="accordion-button collapsed"
                     type="button"
                     data-bs-toggle="collapse"
-                    data-bs-target="#award2"
+                    data-bs-target="#award3"
                   >
                     이상문학상 (2005)
                   </button>
                 </h2>
                 <div
-                  id="award2"
+                  id="award3"
                   class="accordion-collapse collapse"
                   data-bs-parent="#awardsAccordion"
                 >
@@ -291,13 +312,13 @@
                     class="accordion-button collapsed"
                     type="button"
                     data-bs-toggle="collapse"
-                    data-bs-target="#award3"
+                    data-bs-target="#award4"
                   >
                     황순원문학상 (2012)
                   </button>
                 </h2>
                 <div
-                  id="award3"
+                  id="award4"
                   class="accordion-collapse collapse"
                   data-bs-parent="#awardsAccordion"
                 >
