--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     />
     <meta
       property="og:image"
-      content="https://i.namu.wiki/i/SVQjE-vZwl8Gm11sBkv3bmmarOeauiuJfnCz6-SX27wsbMXmHByl4bm1wXtiHmgO5LFE2rskHEfYUWmVBGO7QeoCepKdn2KD5m6DuFvGJAgqc31r8xR0dUfQ1rbcMWRSJF65seQeKNlpxQZu7vzYYw.webp"
+      content="https://github.com/dochmai382/250122_sample/blob/main/05.png?raw=true"
     />
 
     <!-- 트위터 카드 -->
