--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/dochmai382/250122_sample/blob/main/05.png?raw=true"
+      content="https://github.com/dochmai382/250122_sample/blob/main/201994143_700.jpg?raw=true"
     />
 
     <!-- 트위터 카드 -->
